--- a/backend/package.json
+++ b/backend/package.json
@@ -2,9 +2,12 @@
   "name": "dronuts",
   "version": "1.0.0",
   "description": "17776 project from Group 5",
-  "main": "hello_world.ts",
+  "main": "src/hello_world.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/hello_world.js",
+    "build": "tsc --project ./",
+    "lint": "eslint src/**/*.ts test/**/*.ts",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -21,6 +24,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.0",
     "@types/node": "^16.11.22",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
@@ -28,5 +32,10 @@
     "eslint-config-google": "^0.14.0",
     "jest": "^27.5.1",
     "typescript": "^4.5.5"
+  },
+  "jest": {
+    "testMatch": [
+      "**/?(*.)+(spec|test).[j]s?(x)"
+    ]
   }
 }
