--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "start": "node src/hello_world.js",
     "build": "tsc --project ./",
     "lint": "eslint src/**/*.ts test/**/*.ts",
-    "test": "jest"
+    "test": "jest",
+    "check": "npm-check --skip-unused"
   },
   "repository": {
     "type": "git",
@@ -28,12 +29,13 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
-    "@types/node": "^16.11.22",
+    "@types/node": "^17.0.17",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
     "eslint": "^8.8.0",
     "eslint-config-google": "^0.14.0",
     "jest": "^27.5.1",
+    "npm-check": "^5.9.2",
     "typescript": "^4.5.5"
   },
   "jest": {
