--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,12 +45,15 @@
     "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
+    "autoprefixer": "^10.4.2",
     "css-loader": "^6.6.0",
     "eslint": "^8.8.0",
     "eslint-plugin-react": "^7.28.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.5.1",
     "mini-css-extract-plugin": "^2.5.3",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.22",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.5",
     "webpack": "^5.68.0",
