--- a/backend/package.json
+++ b/backend/package.json
@@ -34,12 +34,10 @@
     "eslint": "^8.9.0",
     "eslint-config-google": "^0.14.0",
     "jest": "^27.5.1",
+    "mongodb-memory-server": "^8.3.0",
     "npm-check": "^5.9.2",
+    "ts-jest": "^27.1.3",
+    "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
-  },
-  "jest": {
-    "testMatch": [
-      "**/?(*.)+(spec|test).[j]s?(x)"
-    ]
   }
 }
