--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -28,7 +28,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache-dependency-path: backend
 
-    - run: npm install
+    - run: npm install -f
       working-directory: backend
 
     - run: npm run build --if-present
