--- a/backend/package.json
+++ b/backend/package.json
@@ -23,8 +23,7 @@
   "dependencies": {
     "express": "^4.17.2",
     "mongoose": "^6.2.1",
-    "mongoose-unique-validator": "^3.0.0",
-    "package.json": "^2.0.1"
+    "mongoose-unique-validator": "^3.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
