--- a/backend/package.json
+++ b/backend/package.json
@@ -22,8 +22,9 @@
   "homepage": "https://github.com/CMU-17-356/dronuts2022-group-5#readme",
   "dependencies": {
     "express": "^4.17.2",
-    "mongoose": "^6.2.1",
-    "mongoose-unique-validator": "^3.0.0"
+    "mongoose": "^6.2.2",
+    "mongoose-unique-validator": "^3.0.0",
+    "pkg": "^5.5.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
