--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "package.json": "^2.0.1",
+    "pkg": "^5.5.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
@@ -56,7 +57,7 @@
     "mini-css-extract-plugin": "^2.5.3",
     "npm-check": "^5.9.2",
     "postcss": "^8.4.6",
-    "tailwindcss": "^3.0.22",
+    "tailwindcss": "^3.0.23",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.5",
     "webpack": "^5.69.0",
