Update routes and customer endpoints

--- a/backend/package.json
+++ b/backend/package.json
@@ -19,11 +19,13 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/CMU-17-356/dronuts2022-group-5/issues"
-  }, "homepage": "https://github.com/CMU-17-356/dronuts2022-group-5#readme",
+  },
+  "homepage": "https://github.com/CMU-17-356/dronuts2022-group-5#readme",
   "dependencies": {
+    "body-parser": "^1.19.2",
+    "cors": "^2.8.5",
     "express": "^4.17.3",
     "mongoose": "^6.2.3",
-    "cors": "^2.8.5",
     "mongoose-unique-validator": "^3.0.0",
     "pkg": "^5.5.2"
   },
