--- a/backend/config.json
+++ b/backend/config.json
@@ -1,4 +1,4 @@
 {
     "port": 3000,
-    "db": "mongodb://127.0.0.1/db"
+    "db": "mongodb+srv://admin:zcibfObFuMNtDbjz@cluster0.hjhgb.mongodb.net/dronuts?retryWrites=true&w=majority"
 }
