--- a/.gitignore
+++ b/.gitignore
@@ -164,3 +164,6 @@ dist
 backend/src/**/*.js
 backend/scripts/**/*.js
 backend/test/**/*.js
+backend/config.json
+backend/config.json
+backend/config.json
