--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -20,7 +20,9 @@
         "react",
         "@typescript-eslint"
     ],
-    "rules": {},
+    "rules": {
+        "@typescript-eslint/no-explicit-any": "off"
+    },
     "settings": {
         "react": {
             "version": "detect"
